[workspace]
members = [
	"primitives/rlp",
	"primitives/rlp/macros"
]
resolver = "2"

[workspace.dependencies]
derive_more = { version = "0.99.18", default-features = false, features = ["constructor"] }
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.71"
rustfmt = "0.10.0"
rlp-macros = { path = "primitives/rlp/macros" }
